--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -11,13 +11,14 @@
     "@apollo/react-hooks": "^3.1.5",
     "@apollo/react-ssr": "^3.1.5",
     "@emotion/core": "^10.0.28",
-    "apollo-boost": "^0.4.8",
+    "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.9",
+    "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
-    "dayjs": "^1.8.26",
+    "dayjs": "^1.8.27",
     "graphql": "^15.0.0",
     "next": "9.4.0",
+    "next-apollo": "^4.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-router": "^5.2.0",
