--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -23,5 +23,9 @@
     "react-dom": "16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.0",
+    "typescript": "^4.1.3"
   }
 }
