--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -11,6 +11,7 @@
     "@apollo/react-hooks": "^3.1.5",
     "@apollo/react-ssr": "^3.1.5",
     "@emotion/core": "^10.1.1",
+    "@material-ui/core": "^4.11.3",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
