--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.14.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "recharts": "^2.0.8",
     "swr": "^0.3.11"
   },
   "devDependencies": {
