--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -19,7 +19,6 @@
     "dayjs": "^1.9.8",
     "fp-ts": "^2.9.3",
     "graphql": "^15.4.0",
-    "io-ts": "^2.2.13",
     "next": "^10.0.4",
     "next-apollo": "^4.0.1",
     "react": "^16.14.0",
@@ -27,6 +26,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "recharts": "^2.0.8",
+    "superstruct": "^0.15.1",
     "swr": "^0.3.11"
   },
   "devDependencies": {
