--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
     "@apollo/react-ssr": "^3.1.5",
+    "@emotion/babel-plugin": "^11.3.0",
     "@emotion/core": "^10.1.1",
+    "@emotion/react": "^11.4.1",
     "@material-ui/core": "^4.11.3",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
@@ -19,7 +21,7 @@
     "dayjs": "^1.9.8",
     "fp-ts": "^2.9.3",
     "graphql": "^15.4.0",
-    "next": "^10.0.4",
+    "next": "^11.1.2",
     "next-apollo": "^4.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
