--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     environment:
       - DB_URL=db/production.sqlite3
       - GIN_MODE=release
+      - DSN=https://514620b5bde14216af129b62e81ffb0e@o370716.ingest.sentry.io/5181475
     volumes:
       - ./server/db/:/app/db
     restart: always
@@ -11,7 +12,7 @@ services:
     image: crossword-frontend-server
     restart: always
     environment:
-      - NEXT_PUBLIC_API_URL=http://crossword.theodoretliu.com/api
+      - NEXT_PUBLIC_API_URL=https://crossword.theodoretliu.com/api
   caddy:
     image: caddy
     volumes:
