--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -8,22 +8,25 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/babel-plugin": "^11.3.0",
-    "@emotion/react": "^11.4.1",
-    "@material-ui/core": "^4.12.3",
-    "dayjs": "^1.10.7",
-    "graphql": "^15.4.0",
-    "next": "^11.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.3.0",
-    "recharts": "^2.1.4",
-    "superstruct": "^0.15.2",
-    "swr": "^1.0.1"
+    "@emotion/babel-plugin": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.18",
+    "@next/bundle-analyzer": "^14.0.2",
+    "dayjs": "^1.11.10",
+    "graphql": "^16.8.1",
+    "next": "^14.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.18.0",
+    "react-router-dom": "^6.18.0",
+    "recharts": "^2.9.3",
+    "superstruct": "^1.0.3",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
-    "@types/react": "^17.0.26",
-    "typescript": "^4.4.3"
+    "@types/node": "20.9.0",
+    "@types/react": "^18.2.37",
+    "typescript": "^5.2.2"
   }
 }
