--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   caddy:
     image: caddy
     volumes:
-      - ./server/Caddyfile:/etc/caddy/Caddyfile
+      - ./Caddyfile:/etc/caddy/Caddyfile
     restart: always
     ports:
       - 80:80
@@ -26,7 +26,7 @@ services:
     profiles: ["production"]
   dev-database:
     restart: always
-    image: postgres:15
+    image: postgres:16
     ports:
       - "20001:5432"
     volumes:
