Slim dockerfiles slightly

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,9 +3,17 @@ FROM golang:1.21.4
 RUN apt update && apt upgrade -y
 
 RUN mkdir /app
-COPY *.go *.yml go.mod go.sum /app
+COPY go.mod go.sum /app
 WORKDIR /app
-RUN go get
-RUN go build
+RUN go mod download
 
-ENTRYPOINT ./server
+COPY cmd cmd
+COPY internal internal
+
+RUN go build -o ./server.bin ./cmd/server
+RUN go build -o ./scraper.bin ./cmd/scraper
+RUN go build -o ./scrapeall.bin ./cmd/scrapeall
+
+FROM ubuntu
+COPY --from=0 /app/server.bin /app/scraper.bin /app/scrapeall.bin /bin/
+ENTRYPOINT /bin/server.bin
