Restructure backend to idiomatic go (#24)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,25 @@ services:
       - DB_URL=${DB_URL}
       - GIN_MODE=release
       - DSN=https://514620b5bde14216af129b62e81ffb0e@o370716.ingest.sentry.io/5181475
-    volumes:
-      - ./server/db/:/app/db
     restart: always
     profiles: ["production"]
+  scraper:
+    image: crossword-server
+    environment:
+      - DB_URL=${DB_URL}
+      - GIN_MODE=release
+      - DSN=https://514620b5bde14216af129b62e81ffb0e@o370716.ingest.sentry.io/5181475
+    entrypoint: /bin/scraper.bin
+    profiles: ["production"]
+    restart: always
+  scraper:
+    image: crossword-server
+    environment:
+      - DB_URL=${DB_URL}
+      - GIN_MODE=release
+      - DSN=https://514620b5bde14216af129b62e81ffb0e@o370716.ingest.sentry.io/5181475
+    entrypoint: /bin/scrapeall.bin
+    profiles: ["scrapeall"]
   web:
     image: crossword-frontend-server
     restart: always
@@ -18,7 +33,7 @@ services:
   caddy:
     image: caddy
     volumes:
-      - ./server/Caddyfile:/etc/caddy/Caddyfile
+      - ./Caddyfile:/etc/caddy/Caddyfile
     restart: always
     ports:
       - 80:80
@@ -26,7 +41,7 @@ services:
     profiles: ["production"]
   dev-database:
     restart: always
-    image: postgres:15
+    image: postgres:16
     ports:
       - "20001:5432"
     volumes:
