--- a/Caddyfile
+++ b/Caddyfile
@@ -1,8 +1,9 @@
 crossword.theodoretliu.com {
-	handle_path /api/* {
-		reverse_proxy api:8080
-	}
 	handle_path /* {
 		reverse_proxy web:3000
 	}
+}
+
+api.crossword.theodoretliu.com {
+	reverse_proxy api:8080
 }
