--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
     "@next/bundle-analyzer": "^14.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "autoprefixer": "^10.4.19",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
+    "lucide-react": "^0.399.0",
     "next": "^14.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +28,9 @@
     "react-router-dom": "^6.18.0",
     "recharts": "^2.9.3",
     "superstruct": "^1.0.3",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "20.9.0",
