--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,8 @@
     "superstruct": "^1.0.3",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "20.9.0",
