--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.399.0",
     "next": "^14.0.2",
     "react": "^18.2.0",
@@ -34,6 +35,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.6",
     "@types/node": "20.9.0",
     "@types/react": "^18.2.37",
     "typescript": "^5.2.2"
