--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.399.0",
     "next": "^14.0.2",
+    "posthog-js": "^1.144.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.18.0",
