--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@emotion/babel-plugin": "^11.11.0",
@@ -39,6 +40,7 @@
     "@types/lodash": "^4.17.6",
     "@types/node": "20.9.0",
     "@types/react": "^18.2.37",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "typescript": "^5.2.2"
   }
 }
